connect with properties
Use the selection when starting to work with properties. Use the saved file from the last launch or create a new and clean file.

Co-Authored-By: Uchiha_Da <97444868+KuiYL@users.noreply.github.com>